# docfly

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/docfly/: __init__.py  __main__.py  cli.py  engine.py  server.py
static/: style.css
templates/: page.html
