[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docfly"
version = "0.1.0"
description = "One-command Markdown doc site with live preview"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "markdown>=3.7",
    "jinja2>=3.1",
    "watchfiles>=1.0",
    "pygments>=2.19",
    "python-frontmatter>=1.1",
    "python-multipart>=0.0.20",
]

[project.scripts]
docfly = "docfly.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
